--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>online.kakapapa</groupId>
     <artifactId>response-translator</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-Release</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -76,7 +76,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>3.1.1</version>
+                        <version>2.9.1</version>
                         <configuration>
                             <show>private</show>
                             <nohelp>true</nohelp>
@@ -136,12 +136,12 @@
                 <snapshotRepository>
                     <id>sonatype-nexus-snapshots</id>
                     <name>Sonatype Nexus Snapshots</name>
-                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
                 </snapshotRepository>
                 <repository>
-                    <id>sonatype-nexus-staging</id>
+                    <id>sonatype-nexus-snapshots</id>
                     <name>Nexus Release Repository</name>
-                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                    <url>https://s01.oss.sonatype.org/content/repositories/releases/</url>
                 </repository>
             </distributionManagement>
         </profile>
