--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>online.kakapapa</groupId>
     <artifactId>response-translator</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.0-Release</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
